# advent-of-code-rust

./: .aider.conf.yml  .cursorrules  .gitignore  CONVENTIONS.org  Cargo.toml  PLAN.org  README.org  aoc  flake.nix
input/2021/: 01-sample.out  02-sample.out  03-sample.out  04-sample.out  05-sample.out  (+7 more)
src/aoc/: Cargo.toml
src/aoc/src/: aoc_client.rs  fs.rs  main.rs  prep.rs  run.rs  solver.rs  types.rs
src/aoc/src/solutions/y2024/: d01_example.rs
src/solutions/: Cargo.toml  build.rs
src/solutions/src/: 2022-01.rs  lib.rs
src/solutions/src/2021/: 01-sonar-sweep.rs  02-dive.rs  03-binary-diagnostic.rs  04-giant-squid.rs  05-hydrothermal-venture.rs  06-lanternfish.rs  07-the-treachery-of-whales.rs  08-seven-segment-search.rs  09-smoke-basin.rs  10-syntax-scoring.rs  11-dumbo-octopus.rs  12-passage-pathing.rs
src/solutions/src/2022/: 01-calorie-counting.rs
src/solutions/src/2023/: 01-trebuchet.rs
src/solutions/src/2024/: 01-example.rs  01-historian-hysteria.rs  02-red-nodes-reports.rs  02-red-nosed-reports.rs  03-mull-it-over.rs  04-ceres-search.rs  05-print-queue.rs  06-guard-gallivant.rs  07-bridge-repair.rs  08-resonant-collinearity.rs  09-disk-fragmenter.rs  10-hoof-it.rs  11-plutonian-pebbles.rs  12-garden-groups.rs  13-claw-contraption.rs  14-restroom-redoubt.rs  15-warehouse-woes.rs  16-reindeer-maze.rs  17-chronospatial-computer.rs  18-ram-run.rs  19-linen-layout.rs  20-race-condition.rs  21-keypad-conundrum.rs  22-monkey-market.rs  23-lan-party.rs  24-crossed-wires.rs  25-code-chronicle.rs
src/solutions/src/y2023/: d01_trebuchet.rs  mod.rs
(+33 files in other folders)
