[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
time = "0.3"
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.18"
heck = "0.4"
inventory = "0.3"
aoc-macros = { path = "../aoc-macros" }
aoc-core = { path = "../aoc-core" }
solutions = { path = "../solutions" }

[dev-dependencies]
mockall = "0.12"
tempfile = "3.10"