[package]
name = "solutions"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "solutions"
path = "src/lib.rs"

[dependencies]
inventory = "0.3"
aoc-macros = { path = "../aoc-macros" }
aoc-core = { path = "../aoc-core" }
scan_fmt = "0.2.6"
im = "15.1.0"
itertools = "0.13.0"
regex = "1.11.1"
rustc-hash = "2.1.0"
ndarray = "0.16.1"
memoize = "0.4.2"

[build-dependencies]
heck = "0.4"
